crates/nash-can/src/snapshots/nash_can__module__tests__chained_if_else_if.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf x =\n    if x then\n        1\n    else if x then\n        2\n    else\n        3\n"
---
Module {
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 10,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 1,
                    },
                    end: Position {
                        line: 3,
                        column: 2,
                    },
                },
                value: "f",
            },
            args: [
                Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 3,
                        },
                        end: Position {
                            line: 3,
                            column: 4,
                        },
                    },
                    value: Var(
                        "x",
                    ),
                },
            ],
            body: Located {
                region: Region {
                    start: Position {
                        line: 4,
                        column: 5,
                    },
                    end: Position {
                        line: 9,
                        column: 10,
                    },
                },
                value: If {
                    branches: [
                        IfBranch {
                            condition: Located {
                                region: Region {
                                    start: Position {
                                        line: 4,
                                        column: 8,
                                    },
                                    end: Position {
                                        line: 4,
                                        column: 9,
                                    },
                                },
                                value: VarLocal(
                                    "x",
                                ),
                            },
                            then_branch: Located {
                                region: Region {
                                    start: Position {
                                        line: 5,
                                        column: 9,
                                    },
                                    end: Position {
                                        line: 5,
                                        column: 10,
                                    },
                                },
                                value: Int(
                                    1,
                                ),
                            },
                        },
                        IfBranch {
                            condition: Located {
                                region: Region {
                                    start: Position {
                                        line: 6,
                                        column: 13,
                                    },
                                    end: Position {
                                        line: 6,
                                        column: 14,
                                    },
                                },
                                value: VarLocal(
                                    "x",
                                ),
                            },
                            then_branch: Located {
                                region: Region {
                                    start: Position {
                                        line: 7,
                                        column: 9,
                                    },
                                    end: Position {
                                        line: 7,
                                        column: 10,
                                    },
                                },
                                value: Int(
                                    2,
                                ),
                            },
                        },
                    ],
                    final_else: Located {
                        region: Region {
                            start: Position {
                                line: 9,
                                column: 9,
                            },
                            end: Position {
                                line: 9,
                                column: 10,
                            },
                        },
                        value: Int(
                            3,
                        ),
                    },
                },
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [],
}
