crates/nash-can/src/snapshots/nash_can__module__tests__constructor_in_expression.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Maybe exposing (Maybe(..))\n\nx = Just\n"
---
Module {
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 6,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 1,
                    },
                    end: Position {
                        line: 5,
                        column: 2,
                    },
                },
                value: "x",
            },
            args: [],
            body: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 5,
                    },
                    end: Position {
                        line: 5,
                        column: 9,
                    },
                },
                value: VarConstructor {
                    options: Normal,
                    reference: ConstructorName {
                        home: ModuleName {
                            package: None,
                            name: "Maybe",
                        },
                        union: "Maybe",
                        name: "Just",
                    },
                    index: 0,
                    annotation: Annotation {
                        free_vars: [
                            "a",
                        ],
                        typ: Located {
                            region: Region {
                                start: Position {
                                    line: 0,
                                    column: 0,
                                },
                                end: Position {
                                    line: 0,
                                    column: 0,
                                },
                            },
                            value: Lambda {
                                from: Located {
                                    region: Region {
                                        start: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                    },
                                    value: Var(
                                        "a",
                                    ),
                                },
                                to: Located {
                                    region: Region {
                                        start: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                    },
                                    value: Named {
                                        reference: QualifiedName {
                                            home: ModuleName {
                                                package: None,
                                                name: "Maybe",
                                            },
                                            name: "Maybe",
                                        },
                                        args: [
                                            Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 0,
                                                        column: 0,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 0,
                                                    },
                                                },
                                                value: Var(
                                                    "a",
                                                ),
                                            },
                                        ],
                                    },
                                },
                            },
                        },
                    },
                },
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [],
}
