crates/nash-can/src/snapshots/nash_can__module__tests__ctor_opts_unbox.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype Wrap a\n    = Wrap a\n"
---
Module {
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 5,
                column: 1,
            },
        },
    ),
    decls: Empty,
    unions: [
        Located {
            region: Region {
                start: Position {
                    line: 3,
                    column: 1,
                },
                end: Position {
                    line: 5,
                    column: 1,
                },
            },
            value: Union {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 6,
                        },
                        end: Position {
                            line: 3,
                            column: 10,
                        },
                    },
                    value: "Wrap",
                },
                parameters: [
                    "a",
                ],
                ctors: [
                    Ctor {
                        name: "Wrap",
                        index: 0,
                        arity: 1,
                        arguments: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 4,
                                        column: 12,
                                    },
                                    end: Position {
                                        line: 4,
                                        column: 13,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                        ],
                    },
                ],
                alternatives: 1,
                options: Unbox,
            },
        },
    ],
    aliases: [],
    binops: [],
}
