crates/nash-can/src/snapshots/nash_can__module__tests__duplicate_binop.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ninfix left 6 (|>) = apR\n\ninfix left 6 (|>) = apR2\n"
---
[
    DuplicateBinop {
        name: "|>",
        first: Region {
            start: Position {
                line: 3,
                column: 1,
            },
            end: Position {
                line: 5,
                column: 1,
            },
        },
        second: Region {
            start: Position {
                line: 5,
                column: 1,
            },
            end: Position {
                line: 6,
                column: 1,
            },
        },
    },
]
