crates/nash-can/src/snapshots/nash_can__module__tests__duplicate_ctor_error.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias Point a = { x : a, y : a }\n\ntype Shape a\n    = Point a a\n    | Circle a\n"
---
[
    DuplicateCtor {
        name: "Point",
        first: Region {
            start: Position {
                line: 6,
                column: 7,
            },
            end: Position {
                line: 6,
                column: 12,
            },
        },
        second: Region {
            start: Position {
                line: 3,
                column: 12,
            },
            end: Position {
                line: 3,
                column: 17,
            },
        },
    },
]
