crates/nash-can/src/snapshots/nash_can__module__tests__duplicate_pattern_destruct.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf =\n    let\n        (x, x) = (1, 2)\n    in\n    x\n"
---
[
    DuplicatePattern {
        context: LetBinding,
        name: "x",
        first: Region {
            start: Position {
                line: 5,
                column: 10,
            },
            end: Position {
                line: 5,
                column: 11,
            },
        },
        second: Region {
            start: Position {
                line: 5,
                column: 13,
            },
            end: Position {
                line: 5,
                column: 14,
            },
        },
    },
]
