crates/nash-can/src/snapshots/nash_can__module__tests__duplicate_pattern_func_args.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf x x = x\n"
---
[
    DuplicatePattern {
        context: FuncArgs(
            "f",
        ),
        name: "x",
        first: Region {
            start: Position {
                line: 3,
                column: 3,
            },
            end: Position {
                line: 3,
                column: 4,
            },
        },
        second: Region {
            start: Position {
                line: 3,
                column: 5,
            },
            end: Position {
                line: 3,
                column: 6,
            },
        },
    },
]
